changes in color and otehr modification

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ in QA.</p>
                     <li class="active">
                       <div>
                         <div class="left-image">
-                          <img src="assets/images/courses-01.jpg" alt="">
+                          <img src="assets/images/web-app.jpg" alt="">
                           <!--<div class="price"><h6>$128</h6></div>-->
                         </div>
                         <div class="right-content">
@@ -250,8 +250,8 @@ in QA.</p>
                     <li>
                       <div>
                         <div class="left-image">
-                          <img src="assets/images/courses-02.jpg" alt="">
-                          <div class="price"><h6>$156</h6></div>
+                          <img src="assets/images/mobile-app.jpg" alt="">
+                          <div class="price"></div>
                         </div>
                         <div class="right-content">
                           <h4>Mobile App Testing</h4>
@@ -270,8 +270,8 @@ in QA.</p>
                     <li>
                       <div>
                         <div class="left-image">
-                          <img src="assets/images/courses-03.jpg" alt="">
-                          <div class="price"><h6>$184</h6></div>
+                          <img src="assets/images/manual-testing.jpg" alt="">
+                          <div class="price"></div>
                         </div>
                         <div class="right-content">
                           <h4>Manual Testing</h4>
@@ -286,8 +286,8 @@ in QA.</p>
                     <li>
                       <div>
                         <div class="left-image">
-                          <img src="assets/images/courses-04.jpg" alt="">
-                          <div class="price"><h6>$76</h6></div>
+                          <img src="assets/images/automated-testing.jpg" alt="">
+                          <div class="price"></div>
                         </div>
                         <div class="right-content">
                           <h4>Automated Testing</h4>
