--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ in QA.</p>
              specializing in full-spectrum online logistics software. 
              Company Album. album. Company Culture. Diverse Team.</p><hr>
           
-          <p style="font-size: 19px;" ><strong>Pacifi Blue IT (Feb 2018 - Jan 2021)</strong><br>
+          <p style="font-size: 19px;" ><strong>Pacific Blue IT (Feb 2018 - Jan 2021)</strong><br>
             An Online Learning Center based in Japan that also 
             provides paralegal solutions and a range of other professional services.</p><hr>
         </div>
